# cmake-practice

./: .gitignore  README.md
section1/1-no-header-files/: main.cpp
section1/2-with-header-files/: addition.cpp  calculator  print_result.h
section1/3-glimpse-of-makefile/: calculator  main.cpp  makefile
section2/1-cmake-getting-started/: CMakeLists.txt  addition.cpp  division.cpp
section2/2-cmake-managing-hierarchy/: CMakeLists.txt  print_result.cpp
section3/2-managing-header-files/my_math_dir/src/: addition.cpp  division.cpp
section3/2-managing-header-files/my_print_dir/src/: print_result.cpp
section3/3-more-readable-headers/: CMakeLists.txt
section4/1-set-variables/: CMakeLists.txt
section4/2-manipulating-variables/: CMakeLists.txt
section4/3-operating-variables/: CMakeLists.txt
section5/1-if-else-command/: CMakeLists.txt
section5/2-looping-cmmand/: CMakeLists.txt
section5/3-functions/: CMakeLists.txt
section5/4-scopes/: CMakeLists.txt
section5/4-scopes/demo_subdirectory_scope/: CMakeLists.txt
section6/1-cache-variables/my_math/src/: addition.cpp
section7/1-installation-process-of-packages/my_math/: CMakeLists.txt
section7/2-exporting-a-package/: CMakeLists.txt  main.cpp
section7/2-exporting-a-package/my_math/: CMakeLists.txt
section7/3-using-package/: CMakeLists.txt  main.cpp
section8/: CMakeLists.txt
section9/App_OpenCV/: CMakeLists.txt  main.cpp
section9/GTK_FindModule/: CMakeLists.txt  main.cpp
section9/GTK_FindModule/cmake/modules/: FindGTK3.cmake
section9/GTK_PC/: CMakeLists.bak  CMakeLists.txt
(+2 files in other folders)
